# moji

./: .gitignore  CMakeLists.txt  readme.md
include/moji/: config.in  io.h  moji.h  string.h  type.h
lib/moji/: moji.c
tests/convert_test/: .gitignore  CMakeLists.txt  main.c
tests/convert_test2/: .gitignore  CMakeLists.txt  main.c
tests/count_test/: .gitignore  CMakeLists.txt  main.c
tests/macro_test/: .gitignore  CMakeLists.txt  main.c
